Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:

0.68	Sun Feb 22 2011
	- fix tests

0.67	Sun Feb 22 2011
        - bring Makefile.PL in line with latest trends
        - add testing
        - some catch more errors in jsonrpc
        - set application/json header on response
        - report rpc errors to the mojo log
        - do not localize __WARN__ in eval as this makes no sense here
        - simplified code a bit more

0.66    Thu Feb 22 2011 
	*** INCOMPATIBLE CHANGES ***

        - the service module has to explicitly tell which
          of its methods are to be called remotely via the
          rpc_access_allow.

        - drop the whole _ prefix thing ... and call the
          check_access, mojo_session and mojo_stash by their actual names

        - enhance pod to cover new things    
        
        - follow new mojo class style in examples

0.55	Mon Feb 21 2011
	
0.54	Sat Feb 29 2011
	- CGI::Session, rename main method into dispatch

0.53    Thu Sep 21 2010
   	- POD, fixes

0.52	Mon Sep 20 2010
	- POD improvements, error codes, fixes

0.51	Mon Sep 13 2010
	- improving POD

0.50	Mon Sep 13 2010 
	- initial release